# md-clean

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/md_clean/: __init__.py  __main__.py  cli.py  extractor.py
tests/: test_extractor.py
